@@ -2327,9 +2327,9 @@ public:
       array_property dataaspectratio m , Matrix (1, 3, 1.0)
       radio_property dataaspectratiomode , "{auto}|manual"
       radio_property layer , "{bottom}|top"
-      array_property xlim m , default_lim ()
-      array_property ylim m , default_lim ()
-      array_property zlim m , default_lim ()
+      array_property xlim mu , default_lim ()
+      array_property ylim mu , default_lim ()
+      array_property zlim mu , default_lim ()
       array_property clim m , default_lim ()
       array_property alim m , default_lim ()
       radio_property xlimmode al , "{auto}|manual"
@@ -2463,6 +2463,31 @@ public:
     void update_xdir (void) { update_camera (); }
     void update_ydir (void) { update_camera (); }
     void update_zdir (void) { update_camera (); }
+
+    void magform (double x, double& a, int &b);
+
+    void calc_ticks (const array_property& lims, array_property& ticks);
+
+  public:
+    void update_xlim (void)
+    {
+      if (xtickmode.is ("auto"))
+	calc_ticks (xlim, xtick);
+    }
+
+    void update_ylim (void)
+    {
+      if (ytickmode.is ("auto"))
+	calc_ticks (ylim, ytick);
+    }
+
+    void update_zlim (void)
+    {
+      if (ztickmode.is ("auto"))
+	calc_ticks (zlim, ztick);
+    }
+    
+    
   };
 
 private:
