@@ -1,3 +1,14 @@
+2008-02-04  Shai Ayal  <shaiay@users.sourceforge.net>
+
+	* graphics.h.in (axes::properties::update_xlim,
+	axes::properties::update_ylim, axes::properties::update_zlim):
+	New update methods.
+
+	* graphics.cc (axes::properties::calc_ticks): New function.
+	(axes::properties::magform): New function.
+	(axes::update_axis_limits): Call update_{x,y,z}lims if
+	appropriate.
+
 2008-02-04  Michael Goffioul  <michael.goffioul@gmail.com>
 
 	* graphics.h.in (base_graphics_backend::get_screen_size,
